openjdk: allow extra javac options (--patch-module / --add-exports) for internal-API sources
Parsing JDK module sources for hint deduction needs javac access to non-exported
packages. Two obstacles: (1) --release compiles against ct.sym, which omits
jdk.internal/sun, and (2) a module whose name already exists as a system module
(e.g. java.net.http) collides ("package exists in another module").

createTask now honors an MADDI_JAVAC_OPTIONS env var (';'-separated raw javac
tokens, read from the environment so paths/'='/',' survive intact). When set, it
replaces --release/--enable-preview with the supplied options, so callers can pass
--patch-module java.net.http=<src> and --add-exports java.base/<pkg>=java.net.http
to compile the module's own sources against the running system modules. When
unset, the options are unchanged (--enable-preview --release=26), so existing runs
are unaffected (all openjdk/run/gradleplugin/run-kotlin tests stay green).

Result on java.net.http (JDK 26): with --patch-module + the six --add-exports its
sources use, javac resolution errors drop to ZERO (from dozens). The classpath is
now complete; the remaining drops are the record-pattern grammar gap (QuicEndpoint
+ cascade) and a few maddi commit bugs on java.base internals — both cleanly
isolated and reported, not aborting.

This env var is a first mechanism; promote to a proper --add-exports/--patch-module
CLI + InputConfiguration option later.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>